--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Commit date to master
 on: push
 jobs:
-  date:
+  get-contracts:
     runs-on: ubuntu-latest
     steps:
       # Checkout the branch
@@ -13,6 +13,7 @@ jobs:
   
       - name: get contracts
         run: |
+          yarn
           yarn start
 
       - name: commit
