--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
 name: Commit date to master
-on: push
+on:
+  schedule:
+    - cron: '0 0 * * *' 
 jobs:
   get-contracts:
     runs-on: ubuntu-latest
