--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Add new contracts
 on:
   schedule:
-    - cron: '0 0 * * *' 
+    - cron: '0 0 * * *'
 jobs:
   get-contracts:
     runs-on: ubuntu-latest
@@ -12,13 +12,22 @@ jobs:
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.5.1
-  
+
       - name: get contracts
         run: |
           yarn
           yarn start
 
-      - name: commit
+      - name: commit main
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: add new contracts
+          branch: main
+          file_pattern: contracts
+
+      - name: commit docs
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: add new documentation
+          branch: docs
+          file_pattern: docs
