fix manual action

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,4 +1,7 @@
-name: Add new contracts
+name: Add new contracts manually
+on:
+  release:
+    types: [published]
 jobs:
   get-contracts:
     runs-on: ubuntu-latest
