--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
 name: Add new contracts
 on:
-  schedule:
+  - schedule:
     - cron: '0 0 * * *'
+  - workflow_dispatch
 jobs:
   get-contracts:
     runs-on: ubuntu-latest
@@ -27,13 +28,14 @@ jobs:
       - name: Checkout docs
         run: |
           git checkout docs --
-      - name: Merge main to docs
-        uses: devmasx/merge-branch@master
-        with:
-          type: now
-          from_branch: main
-          target_branch: docs
-          github_token: ${{ github.token }}
+      - name: Set Git config
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "Github Actions"
+      - name: Merge master back to dev
+        run: |
+          git pull
+          git merge --no-ff main -m "Auto-merge main to docs"
       - name: commit docs
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
