--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Add new contracts
 on:
-  - schedule:
+  schedule:
     - cron: '0 0 * * *'
-  - workflow_dispatch
+  workflow_dispatch:
 jobs:
   get-contracts:
     runs-on: ubuntu-latest
