--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,15 +26,15 @@ jobs:
           branch: main
           file_pattern: contracts *.txt
       - name: Checkout docs
-        run: |
-          git checkout docs --
+        uses: actions/checkout@v2
+        with:
+          ref: docs
       - name: Set Git config
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "Github Actions"
       - name: Merge master back to dev
         run: |
-          git pull
           git merge --no-ff main -m "Auto-merge main to docs" --allow-unrelated-histories
       - name: commit docs
         uses: stefanzweifel/git-auto-commit-action@v4
