--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: docs
+          clean: false
       - name: Set Git config
         run: |
           git config --local user.email "actions@github.com"
